@@ -3,18 +3,20 @@
  - doc extraction and reformatting of comments in gtk-doc style
  - handling of directory removal (need to poll on monitored empty dirs).
  - special case where dnotify is not a good idea (temporary storage)
- - automatic switch from dnotify to poll for resources getting too much
-   kernel events.
  - "make valgrind" regression tests for both client and server.
  - fix "make tests" to use /tmp to avoid $pwd in the paths of the output
  - try to work around the fact the stat() info precision is only 1 sec
    on ext2/ext3, especially for directories.
+ - check handling of mismatched resources i.e. mondir on file
+   and monfile on directories and what happen when file type change.
                                                                                 
 Regression tests:
  - try all the file length on the client till error.
  - try the fragmented/multirequests tests on the client side
 
 Done:
+ - automatic switch from dnotify to poll for resources generating too much
+   kernel events.
  - handling of missing monitored resources where dnotify() won't work
  - <markmc> DV, gam_server should prolly be in /usr/libexec
  - path flexibility for the remote server in gam_fork.c (needed for
